# py-spinners

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
examples/: example1.py  example2.py
spinners/: __init__.py  base.py  codepage.py  enums.py  errors.py  future.py  register.py  test.py
tests/: conftest.py  test_base.py  test_codepage.py  test_enums.py  test_future.py  test_init.py  test_register.py  test_spinners.py
